--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    background-image: (eto.jpg);
-    background-size: center;
+    background-image: url (eto.jpg);
+    background-size: cover;
     background-attachment: fixed;
     color: #222;
     scroll-behavior: smooth;
@@ -11,7 +11,7 @@ body {
     
 }
 
-/* Navigation Bar */
+
 .navbar {
     background-color: rgb(112, 83, 102);
     position: sticky;
@@ -41,7 +41,7 @@ body {
     border-radius: 5px;
 }
 
-/* Sections */
+
 .top {
     text-align: center;
     background-color: transparent;
@@ -67,7 +67,7 @@ body {
     padding: 20px;
 }
 
-/* Info Box */
+
 .info-box {
     
     background-size: center;
@@ -87,7 +87,7 @@ body {
     color: #1f1c1f;
 }
 
-/* Table */
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -128,7 +128,7 @@ th {
   font-size: 14px;
   color: #333;
 }
-/* Footer */
+
 footer {
    text-align: center;
     padding: 15px;
@@ -137,6 +137,7 @@ footer {
     margin-top: 20px;
 
 }
+
 
 
 
