--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    background-color: pink; 
+    background-image: url("eto.jpg"); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
