--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
+    background-color: light blue;
     background-image: url("eto.jpg"); 
     background-size: cover;
     background-position: center;
@@ -140,6 +141,7 @@ footer {
     margin-top: 20px;
 
 }
+
 
 
 
