--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 18px;
     background-color: light blue;
     background-image: url("eto.jpg"); 
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-attachment: fixed;
     color: #222;
@@ -141,6 +141,7 @@ footer {
     margin-top: 20px;
 
 }
+
 
 
 
