--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    background-color: lightblue;
+    background-color: white;
     background-image: url("eto.jpg"); 
     background-size: contain;
     background-position: center;
     color: #222;
     scroll-behavior: smooth;
     box-sizing: border-box;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
     
     
 }
