--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
     font-size: 18px;
     background-color: white;
     background-image: url("eto.jpg"); 
-    background-size: contain;
+    background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     color: #222;
     scroll-behavior: smooth;
     box-sizing: border-box;
@@ -140,6 +141,7 @@ footer {
     margin-top: 20px;
 
 }
+
 
 
 
